tweaked junit settings from pom and disabled the perf tests from running every time